# Microvisor-Demo-Remote-Debug

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  deploy.sh  docker-entrypoint.sh  mv-remote-debug-demo.code-workspace  toolchain.cmake
.github/workflows/: build.yml
demo/: CMakeLists.txt  app_version.in  generic.c  generic.h  http.c  http.h  logging.c  logging.h  main.c  main.h  network.c  network.h  uart_logging.c  uart_logging.h
